fixing alignment & button color

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,3 +23,11 @@
     color: black;
     background-color: white;
 }
+
+
+@media screen and (max-width: 500px) {
+    .demo {
+        margin-left: 0
+    }
+
+}
